# file-validator-proof-of-concept

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_protection.cmake
src/: main.cpp
src/file/: header_structure.hpp  packet_structure.hpp  validation_defines.hpp
src/file/reader/: file_reader.cpp  file_reader.hpp
src/file/validator/: file_validator.cpp  file_validator.hpp
src/file/writer/: file_writer.cpp  file_writer.cpp.zKDhyB  file_writer.hpp
